syntax = "proto3";
package types;

message TransactionV1_2 {
    bytes version = 1;
	bytes from = 2;
	bytes to = 3;
	bytes value = 4;
	int64 timestamp = 5;
	bytes signature = 6;
	uint64 id = 7;
	bytes transactionHash = 8;
	int64  nonce = 9;
}
